2008-03-10  Marek Habersack  <mhabersack@novell.com>

	* RoleManagerModule.cs: initialize _config before adding event
	handlers and account for the fact that _config might still be null
	in the methods that use it.

2007-12-30  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SqliteMembershipProvider.cs, SqlRoleProvider.cs: added chema checking
	* added AspNetDBSchemaChecker.cs: schema checker helper class

2007-12-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Roles.cs: fixed Providers property to be thread safe

2007-12-08  Marek Habersack  <mhabersack@novell.com>

	* SqliteRoleProvider.cs: added - a Role Provider for
	Sqlite, based on PostgreSQL Role Provider code from Daniel
	Nauck <dna@informatik.uni-kiel.de>

	* SqliteMembershipProvider.cs: added - a Membership Provider for
	Sqlite, based on PostgreSQL Membership Provider code from Daniel
	Nauck <dna@informatik.uni-kiel.de>

2007-11-28  Marek Habersack  <mhabersack@novell.com>

	* SqlMembershipProvider.cs: handle situation when there is no
	connection string configured for the SQL Membership Provider.

2007-11-01  Marek Habersack  <mhabersack@novell.com>

	* RolePrincipal.cs, MembershipProvider.cs: use the new
	MachineKeySectionUtils class wherever necessary.

	* FormsAuthentication.cs: use the new MachineKeySectionUtils class
	wherever necessary.
	GetHexString is a private method again.

2007-10-31  Marek Habersack  <mhabersack@novell.com>

	* FormsAuthentication.cs: made GetHexString an internal method -
	it is used in the AssemblyResourceLoader.cs

2007-08-14  Marek Habersack  <mhabersack@novell.com>

	* Roles.cs: remove unused field.

	* SqlMembershipProvider.cs: remove unused variable.

2007-08-13 Vladimir Krasnov <vladimirk@mainsoft.com>

	* SqlRoleProvider.cs: fixed ApplicationName initialization

2007-06-24 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FormsAuthentication.cs: improved performance of GetHexString()

2007-05-17 Vladimir Krasnov <vladimirk@mainsoft.com>
