@@ -1,3 +1,13 @@
+2008-05-07  Marek Habersack  <mhabersack@novell.com>
+
+	* RolePrincipal.cs: fix:
+		- Reloading the roles cache from the provider when expired
+		- Update issue & expiry date for expired tickets
+		- Incrementing the cookie expiry date
+		- Obey Roles.MaxCachedResults
+	  Fixes bug #385877. Patch from Ivan Hamilton
+		<ivan@chimerical.com.au>, thanks!
+
 2008-03-10  Marek Habersack  <mhabersack@novell.com>
 
 	* RoleManagerModule.cs: initialize _config before adding event
